multiscale attention revisited

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2239,17 +2239,20 @@
     "\n",
     "    # ??\n",
     "    if attn_mask is not None:\n",
-    "        pass\n",
+    "        if attn_mask.dtype == torch.bool:\n",
+    "            attn_bias.masked_fill_(attn_mask.logical_not(), float(\"-inf\"))\n",
+    "        else:\n",
+    "            attn_bias += attn_mask\n",
     "\n",
     "    # query key dot product in attention operation\n",
     "    attn_weight = query @ key.transpose(-2, -1) * scale_factor\n",
     "    \n",
     "    attn_weight += attn_bias\n",
     "\n",
-    "    # normalized the attention weight between [0, 1]\n",
+    "    # normalize the attention weight between [0, 1]\n",
     "    attn_weight = torch.softmax(attn_weight, dim=-1)\n",
     "\n",
-    "    # will make cerntail weights to zero with prob of dropout_p\n",
+    "    # will make random weights to zero with prob of dropout_p\n",
     "    attn_weight = torch.dropout(attn_weight, dropout_p, train=True)\n",
     "\n",
     "    # final context vector\n",
@@ -2630,135 +2633,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": null,
    "id": "1ddf6236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Hiera(nn.Module):\n",
-    "    def __init__(self, embed_dim = 96, num_heads = 1, drop_path_rate = 0.0,  q_pool = 3,\n",
-    "                  q_stride = (2, 2), stages = (2, 3, 16, 3), dim_mul = 2.0, head_mul = 2.0, \n",
-    "                  window_pos_embed_bkg_spatial_size = (14, 14), window_spec = (8, 4, 14, 7),\n",
-    "                  global_att_blocks = (12, 16, 20), return_interm_layers = True):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        \n",
-    "        #??\n",
-    "        assert len(stages) == len(window_spec)\n",
-    "        self.window_spec = window_spec\n",
-    "\n",
-    "        #??\n",
-    "        depth = sum(stages)\n",
-    "\n",
-    "        # downsampling ratio of width and height\n",
-    "        self.q_stride = q_stride\n",
-    "\n",
-    "        # cum sum with 1 less\n",
-    "        self.stage_ends = [sum(stages[:i]) -1 for i in range(1, len(stages)+1)]\n",
-    "        \n",
-    "\n",
-    "        #??\n",
-    "        assert 0 <= q_pool <= len(self.stage_ends[:-1])\n",
-    "        self.q_pool_blocks = [x + 1 for x in self.stage_ends[:-1]][:q_pool]\n",
-    "        \n",
-    "        #??\n",
-    "        self.return_interm_layers = return_interm_layers\n",
-    "\n",
-    "        \n",
-    "        # convolution operation\n",
-    "        self.patch_embed = PatchEmbed(embed_dim=embed_dim)\n",
-    "        \n",
-    "        #??\n",
-    "        self.global_att_blocks = (12, 16, 20)\n",
-    "\n",
-    "        \n",
-    "        #??\n",
-    "        self.window_pos_embed_bkg_spatial_size = window_pos_embed_bkg_spatial_size\n",
-    "\n",
-    "        #??\n",
-    "        self.pos_embed = nn.Parameter(\n",
-    "            torch.zeros(1, embed_dim, *self.window_pos_embed_bkg_spatial_size)\n",
-    "        )\n",
-    "        \n",
-    "        #??\n",
-    "        self.pos_embed_window = nn.Parameter(\n",
-    "            torch.zeros(1, embed_dim, self.window_spec[0], self.window_spec[0])\n",
-    "        )\n",
-    "\n",
-    "        #??\n",
-    "        dpr = [x.item() for x in torch.linspace(0, drop_path_rate, depth)]\n",
-    "        \n",
-    "\n",
-    "        cur_stage = 1\n",
-    "        self.blocks = nn.ModuleList()\n",
-    "        \n",
-    "        for i in range(depth):\n",
-    "            dim_out = embed_dim\n",
-    "\n",
-    "            #??\n",
-    "            window_size = self.window_spec[cur_stage - 1]\n",
-    "\n",
-    "            #??\n",
-    "            if self.global_att_blocks is not None:\n",
-    "                window_size = 0 if i in self.global_att_blocks else window_size\n",
-    "\n",
-    "            \n",
-    "            if i - 1 in self.stage_ends:\n",
-    "                #??\n",
-    "                dim_out = int(embedding_dim * dim_mul)\n",
-    "                num_heads = int(num_heads * head_mul)\n",
-    "                cur_stage += 1\n",
-    "            \n",
-    "            #??\n",
-    "            block = MultiScaleBlock(\n",
-    "                dim = embed_dim,\n",
-    "                dim_out = dim_out,\n",
-    "                num_heads = num_heads,\n",
-    "                drop_path = dpr[i],\n",
-    "                q_stride = self.q_stride if i in self.q_pool_blocks else None,\n",
-    "                window_size = window_size \n",
-    "            )\n",
-    "\n",
-    "            embed_dim = dim_out\n",
-    "            self.blocks.append(block)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        self.channel_list = ([self.blocks[i].dim_out for i in self.stage_ends[::-1]]\n",
-    "                             if return_interm_layers else [self.blocks[-1].dim_out])\n",
-    "        \n",
-    "\n",
-    "\n",
-    "    def _get_pos_embed(self, hw):\n",
-    "            h, w = hw\n",
-    "\n",
-    "            #??\n",
-    "            window_embed = self.pos_embed_window\n",
-    "            \n",
-    "            pos_embed = F.interpolate(self.pos_embed, size=(h, w), mode='bicubic')\n",
-    "            pos_embed =  pos_embed + window_embed.tile(\n",
-    "                [x // y for x, y in zip(pos_embed.shape, window_embed.shape)]\n",
-    "            )\n",
-    "            pos_embed = pos_embed.permute(0, 2, 3, 1)\n",
-    "            return pos_embed\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "\n",
-    "            # downsample\n",
-    "            x = self.patch_embed(x)\n",
-    "            \n",
-    "            x = x + self._get_pos_embed(x.shape[1:3])\n",
-    "\n",
-    "            outputs = []\n",
-    "            for i, blk in enumerate(self.blocks):\n",
-    "                x = blk(x)\n",
-    "                if (i == self.stage_ends[-1] or (i in self.stage_ends and self.return_interm_layers)):\n",
-    "                    feats = x.permute(0, 3, 1, 2)\n",
-    "                    outputs.append(feats)\n",
-    "\n",
-    "            return outputs    "
+    "# class Hiera(nn.Module):\n",
+    "#     def __init__(self)"
    ]
   },
   {
@@ -2960,6 +2841,245 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4370860e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb542776",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf745431",
+   "metadata": {},
+   "source": [
+    "##### Temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 728,
+   "id": "220ac43c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_pool(x, pool=None, norm=None):\n",
+    "    if pool is None:\n",
+    "        return x\n",
+    "    \n",
+    "    # (B, H, W, C) -> (B, C, H, W)\n",
+    "    x = x.permute(0, 3, 1, 2)\n",
+    "    \n",
+    "    x = pool(x)\n",
+    "    x.purmte(0, 2, 3, 1)\n",
+    "\n",
+    "    if norm:\n",
+    "        x = norm(x)\n",
+    "    \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 734,
+   "id": "0b645729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def scaled_dot_product_attention(query, key, value, attn_mask=None, dropout_p=0.0, is_causal=False,\n",
+    "                                 scale=None):\n",
+    "    # L, S == H*W in images, token length in texts.\n",
+    "    L, S = query.size(-2), key.size(-2)\n",
+    "    \n",
+    "    # normalize variance to 1\n",
+    "    scale_factor = 1 / math.sqrt(query.size(-1)) if scale is None else scale\n",
+    "\n",
+    "    attn_bias = torch.zeros(L, S, dtype=query.dtype)\n",
+    "\n",
+    "    # this is for masking future tokens\n",
+    "    if is_causal:\n",
+    "        assert attn_mask is None\n",
+    "        temp_mask = torch.ones(L, S, dtype=torch.bool).tril(diagonal=0)\n",
+    "        attn_bias.masked_fill(temp_mask.logical_not(), float('-inf'))\n",
+    "        attn_bias.to(query.dtype)\n",
+    "\n",
+    "\n",
+    "    if attn_mask is not None:\n",
+    "        if attn_mask.dtype == torch.bool:\n",
+    "            attn_bias.masked_fill(attn_mask.logical_not(), float('-inf'))\n",
+    "        else:\n",
+    "            attn_bias += attn_mask\n",
+    "\n",
+    "    \n",
+    "    attn_weight = query @ key.transpose(-2, -1) * scale_factor\n",
+    "    \n",
+    "    # this is the maksing operation, if bais has zero effect if it has -inf it will be \n",
+    "    # masked when we perform softmax ops.\n",
+    "    attn_weight += attn_bias\n",
+    "    \n",
+    "    # attn weight probs\n",
+    "    attn_weight = torch.softmax(attn_weight, dim=-1)\n",
+    "\n",
+    "    # dropout on weights (not sure why it's default? because p=0.0, have no effect)\n",
+    "    attn_weight = torch.dropout(attn_weight, dropout_p, train=True)\n",
+    "    \n",
+    "    # weighted context vector\n",
+    "    return attn_weight @ value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 733,
+   "id": "2d308c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ True, False, False, False, False],\n",
+      "        [ True,  True, False, False, False],\n",
+      "        [ True,  True,  True, False, False],\n",
+      "        [ True,  True,  True,  True, False],\n",
+      "        [ True,  True,  True,  True,  True]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., -inf, -inf, -inf],\n",
+       "        [0., 0., 0., -inf, -inf],\n",
+       "        [0., 0., 0., 0., -inf],\n",
+       "        [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 733,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attn_bias = torch.zeros(5, 5)\n",
+    "temp_mask = torch.ones(5, 5, dtype=torch.bool).tril(diagonal=0)\n",
+    "print(temp_mask)\n",
+    "\n",
+    "attn_bias.masked_fill(temp_mask.logical_not(), float('-inf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 735,
+   "id": "d7e3c28f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiScaleAttention(nn.Module):\n",
+    "    def __init__(self, dim, dim_out, num_heads, q_pool=None):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # input channel dim\n",
+    "        self.dim = dim\n",
+    "\n",
+    "        # output channel dim\n",
+    "        self.dim_out = dim_out\n",
+    "\n",
+    "        # attention heads\n",
+    "        self.num_heads = num_heads\n",
+    "        head_dim = dim_out // num_heads\n",
+    "\n",
+    "        # scale factor which basically normalize variance to 1\n",
+    "        # which increase during dot productt between q and k and it's dim equals to the dim.\n",
+    "        self.scale = head_dim**-0.5\n",
+    "\n",
+    "        # spatial dimension reduction (e.g max pool)\n",
+    "        self.q_pool = q_pool\n",
+    "        \n",
+    "        # query, key, value embedding vector in atttention\n",
+    "        # we can create it and split it before attention operation.\n",
+    "        self.qkv = nn.Linear(dim, dim_out * 3)\n",
+    "\n",
+    "        # final linear layer in attention.\n",
+    "        self.proj = nn.Linear(dim_out, dim_out)\n",
+    "        \n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, H, W, _  = x.shape\n",
+    "\n",
+    "        # let's pass x through qkv \n",
+    "        # (B, H, W, _) -> (B, H, W, dim_out * 3)\n",
+    "        qkv = self.qkv(x)\n",
+    "        \n",
+    "        # reshape in such a way so we split dim to head dim \n",
+    "        # (B, H, W, dim_out * 3) -> (B, H*W, 3, num_heads, dim_out//num_heads)\n",
+    "        qkv = qkv.reshape(B, H*W, 3, self.num_heads, -1)\n",
+    "        \n",
+    "\n",
+    "        # extract query, key, value\n",
+    "        # (B, H*W, 3, num_heads, dim_out//num_heads) -> ((B, H*W, num_heads, dim_out//num_heads),..,..)\n",
+    "        q, k, v = torch.unbind(2)\n",
+    "\n",
+    "        # downsample H*W\n",
+    "        if self.q_pool:\n",
+    "            q = do_pool(q.reshape(B, H, W, -1), self.q_pool)\n",
+    "\n",
+    "            # downsampled H and W\n",
+    "            H, W  = q.shape[1:3]\n",
+    "            q = q.reshape(B, H*W, self.num_heads, -1)\n",
+    "        \n",
+    "        \n",
+    "        # perform attention operation and get the final contex vec.\n",
+    "        # transpose H*W and num_heads such that multi head attention will be peformed.\n",
+    "        x = scaled_dot_product_attention(\n",
+    "            q.transpose(1, 2),\n",
+    "            k.transpose(1, 2),\n",
+    "            v.transpose(1, 2)\n",
+    "        )\n",
+    "\n",
+    "        return x     \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d920c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9f8180",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7088428",
    "metadata": {},
    "outputs": [],
    "source": []
