--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2863,348 +2863,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 728,
-   "id": "220ac43c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def do_pool(x, pool=None, norm=None):\n",
-    "    if pool is None:\n",
-    "        return x\n",
-    "    \n",
-    "    # (B, H, W, C) -> (B, C, H, W)\n",
-    "    x = x.permute(0, 3, 1, 2)\n",
-    "    \n",
-    "    x = pool(x)\n",
-    "    x.purmte(0, 2, 3, 1)\n",
-    "\n",
-    "    if norm:\n",
-    "        x = norm(x)\n",
-    "    \n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 734,
-   "id": "0b645729",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def scaled_dot_product_attention(query, key, value, attn_mask=None, dropout_p=0.0, is_causal=False,\n",
-    "                                 scale=None):\n",
-    "    # L, S == H*W in images, token length in texts.\n",
-    "    L, S = query.size(-2), key.size(-2)\n",
-    "    \n",
-    "    # normalize variance to 1\n",
-    "    scale_factor = 1 / math.sqrt(query.size(-1)) if scale is None else scale\n",
-    "\n",
-    "    attn_bias = torch.zeros(L, S, dtype=query.dtype)\n",
-    "\n",
-    "    # this is for masking future tokens\n",
-    "    if is_causal:\n",
-    "        assert attn_mask is None\n",
-    "        temp_mask = torch.ones(L, S, dtype=torch.bool).tril(diagonal=0)\n",
-    "        attn_bias.masked_fill(temp_mask.logical_not(), float('-inf'))\n",
-    "        attn_bias.to(query.dtype)\n",
-    "\n",
-    "\n",
-    "    if attn_mask is not None:\n",
-    "        if attn_mask.dtype == torch.bool:\n",
-    "            attn_bias.masked_fill(attn_mask.logical_not(), float('-inf'))\n",
-    "        else:\n",
-    "            attn_bias += attn_mask\n",
-    "\n",
-    "    \n",
-    "    attn_weight = query @ key.transpose(-2, -1) * scale_factor\n",
-    "    \n",
-    "    # this is the maksing operation, if bais has zero effect if it has -inf it will be \n",
-    "    # masked when we perform softmax ops.\n",
-    "    attn_weight += attn_bias\n",
-    "    \n",
-    "    # attn weight probs\n",
-    "    attn_weight = torch.softmax(attn_weight, dim=-1)\n",
-    "\n",
-    "    # dropout on weights (not sure why it's default? because p=0.0, have no effect)\n",
-    "    attn_weight = torch.dropout(attn_weight, dropout_p, train=True)\n",
-    "    \n",
-    "    # weighted context vector\n",
-    "    return attn_weight @ value\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 733,
-   "id": "2d308c0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ True, False, False, False, False],\n",
-      "        [ True,  True, False, False, False],\n",
-      "        [ True,  True,  True, False, False],\n",
-      "        [ True,  True,  True,  True, False],\n",
-      "        [ True,  True,  True,  True,  True]])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., -inf, -inf, -inf, -inf],\n",
-       "        [0., 0., -inf, -inf, -inf],\n",
-       "        [0., 0., 0., -inf, -inf],\n",
-       "        [0., 0., 0., 0., -inf],\n",
-       "        [0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 733,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "attn_bias = torch.zeros(5, 5)\n",
-    "temp_mask = torch.ones(5, 5, dtype=torch.bool).tril(diagonal=0)\n",
-    "print(temp_mask)\n",
-    "\n",
-    "attn_bias.masked_fill(temp_mask.logical_not(), float('-inf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 735,
-   "id": "d7e3c28f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MultiScaleAttention(nn.Module):\n",
-    "    def __init__(self, dim, dim_out, num_heads, q_pool=None):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        # input channel dim\n",
-    "        self.dim = dim\n",
-    "\n",
-    "        # output channel dim\n",
-    "        self.dim_out = dim_out\n",
-    "\n",
-    "        # attention heads\n",
-    "        self.num_heads = num_heads\n",
-    "        head_dim = dim_out // num_heads\n",
-    "\n",
-    "        # scale factor which basically normalize variance to 1\n",
-    "        # which increase during dot productt between q and k and it's dim equals to the dim.\n",
-    "        self.scale = head_dim**-0.5\n",
-    "\n",
-    "        # spatial dimension reduction (e.g max pool)\n",
-    "        self.q_pool = q_pool\n",
-    "        \n",
-    "        # query, key, value embedding vector in atttention\n",
-    "        # we can create it and split it before attention operation.\n",
-    "        self.qkv = nn.Linear(dim, dim_out * 3)\n",
-    "\n",
-    "        # final linear layer in attention.\n",
-    "        self.proj = nn.Linear(dim_out, dim_out)\n",
-    "        \n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        B, H, W, _  = x.shape\n",
-    "\n",
-    "        # let's pass x through qkv \n",
-    "        # (B, H, W, _) -> (B, H, W, dim_out * 3)\n",
-    "        qkv = self.qkv(x)\n",
-    "        \n",
-    "        # reshape in such a way so we split dim to head dim \n",
-    "        # (B, H, W, dim_out * 3) -> (B, H*W, 3, num_heads, dim_out//num_heads)\n",
-    "        qkv = qkv.reshape(B, H*W, 3, self.num_heads, -1)\n",
-    "        \n",
-    "\n",
-    "        # extract query, key, value\n",
-    "        # (B, H*W, 3, num_heads, dim_out//num_heads) -> ((B, H*W, num_heads, dim_out//num_heads),..,..)\n",
-    "        q, k, v = torch.unbind(2)\n",
-    "\n",
-    "        # downsample H*W\n",
-    "        if self.q_pool:\n",
-    "            q = do_pool(q.reshape(B, H, W, -1), self.q_pool)\n",
-    "\n",
-    "            # downsampled H and W\n",
-    "            H, W  = q.shape[1:3]\n",
-    "            q = q.reshape(B, H*W, self.num_heads, -1)\n",
-    "        \n",
-    "        \n",
-    "        # perform attention operation and get the final contex vec.\n",
-    "        # transpose H*W and num_heads such that multi head attention will be peformed.\n",
-    "        x = scaled_dot_product_attention(\n",
-    "            q.transpose(1, 2),\n",
-    "            k.transpose(1, 2),\n",
-    "            v.transpose(1, 2)\n",
-    "        )\n",
-    "\n",
-    "        return x     \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 747,
-   "id": "775ab899",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DropPath(nn.Module):\n",
-    "    def __init__(self, drop_prop=0.0, scale_by_keep=True):\n",
-    "        super().__init__()\n",
-    "        self.drop_prop = drop_prop\n",
-    "        self.scale_by_keep = scale_by_keep\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        if self.drop_prop == 0.0 or not self.training:\n",
-    "            return x\n",
-    "\n",
-    "        keep_prop = 1 - self.drop_prop\n",
-    "\n",
-    "        # drop randomly with prop of drop_prop specific sample\n",
-    "        shape = (x.shape[0],) + (1,) * (x.ndim-1)\n",
-    "        random_tensor = x.new_empty(shape).bernoulli_(keep_prop)\n",
-    "        if keep_prop > 0.0 and self.scale_by_keep:\n",
-    "            random_tensor.div_(keep_prop)\n",
-    "        \n",
-    "        return x * random_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 744,
-   "id": "db84bd9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = torch.randn(5, 1, 1, 1)\n",
-    "random_tensor = x.new_empty(x.shape).bernoulli_()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 745,
-   "id": "8ecd8e96",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[[0.]]],\n",
-       "\n",
-       "\n",
-       "        [[[1.]]],\n",
-       "\n",
-       "\n",
-       "        [[[1.]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.]]],\n",
-       "\n",
-       "\n",
-       "        [[[1.]]]])"
-      ]
-     },
-     "execution_count": 745,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4b41545",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 736,
-   "id": "d8d920c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from functools import partial\n",
-    "\n",
-    "class MultiScaleBlock(nn.Module):\n",
-    "    def __init__(self, dim, dim_out, num_heads, mlp_ratio=4.0, drop_path=0.0, \n",
-    "                 norm_layer=\"LayerNorm\", q_stride=None, act_layer=nn.GELU, window_size=0):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        if isinstance(norm_layer, str):\n",
-    "            norm_layer = partial(getattr(nn, norm_layer), eps=1e-6)\n",
-    "            \n",
-    "        self.dim = dim\n",
-    "        self.dim_out = dim_out\n",
-    "\n",
-    "        # pre norm\n",
-    "        self.norm1 = norm_layer(dim)\n",
-    "        \n",
-    "        self.window_size = window_size\n",
-    "        self.pool, self.q_stride = None, q_stride\n",
-    "        if self.q_stride:\n",
-    "            self.pool = nn.MaxPool2d(kernel_size=q_stride, stride=q_stride, ceil_mode=False)\n",
-    "        \n",
-    "        self.attn = MultiScaleAttention(dim, dim_out, num_heads=num_heads,\n",
-    "                                        q_pool=self.pool)\n",
-    "        \n",
-    "        # switch off random sample points\n",
-    "        self.drop_path = DropPath(drop_path) if drop_path > 0.0 else nn.Identity()\n",
-    "\n",
-    "\n",
-    "        # after norm\n",
-    "        self.norm2 = norm_layer(dim_out)\n",
-    "\n",
-    "        \n",
-    "        # attention mlp layer\n",
-    "        self.mlp = MLP(dim_out)\n",
-    "\n",
-    "        # make input and output same dim for skip connection\n",
-    "        if dim != dim_out:\n",
-    "            self.proj = nn.Linear(dim, dim_out)\n",
-    "    \n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        shortcut = x\n",
-    "\n",
-    "        # pre-norm\n",
-    "        x = self.norm1(x)\n",
-    "\n",
-    "        # input dim correction for the skip connection\n",
-    "        # 1. usual final dim correction\n",
-    "        # 2. if we perform pool which reduce spatial dim (H*W)\n",
-    "        if self.dim != self.dim_out:\n",
-    "            shortcut = do_pool(self.proj(x), self.pool)\n",
-    "\n",
-    "\n",
-    "        window_size = self.window_size\n",
-    "        if window_size > 0:\n",
-    "            H, W = x.shape[1], x.shape[2]\n",
-    "            x, pad_hw = window_partition(x, window_size)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "83ff172b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def window_partition(x, window_size):\n",
+    "    B, H, W, C = x.shape\n",
+    "    pad_h = (window_size - H % window_size) % window_size\n",
+    "    pad_w = (window_size - W % window_size) % window_size\n",
+    "    if pad_h > 0 or pad_w > 0:\n",
+    "        x = F.pad(x, (0, 0, 0, pad_w, 0, pad_w))"
+   ]
   },
   {
    "cell_type": "code",
