--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2863,17 +2863,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "83ff172b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def window_partition(x, window_size):\n",
     "    B, H, W, C = x.shape\n",
-    "    pad_h = (window_size - H % window_size) % window_size\n",
     "    pad_w = (window_size - W % window_size) % window_size\n",
-    "    if pad_h > 0 or pad_w > 0:\n",
-    "        x = F.pad(x, (0, 0, 0, pad_w, 0, pad_w))"
+    "    pad_h = (window_size - H % window_size) % window_size\n",
+    "    \n",
+    "    if pad_w > 0 or pad_h > 0:\n",
+    "        x = F.pad(x, (0, 0, 0, pad_w, 0, pad_h))\n",
+    "    \n",
+    "    Hp, Wp = H + pad_h, W + pad_w\n",
+    "    \n",
+    "    x = x.view(B, Hp//window_size, window_size, Wp//window_size, window_size, C)\n",
+    "    windows = x.permute(0, 1, 3, 2, 4, 5)\n",
+    "    windows = windows.contiguous().view(-1, window_size, window_size, C)\n",
+    "    \n",
+    "    return windows, (Hp, Wp)"
    ]
   },
   {
